ingress-configuration.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/preserve-trailing-slash: "true"
    nginx.ingress.kubernetes.io/enable-rewrite-log: "true"
spec:
  rules:
    - http:
        paths:
          - backend:
              serviceName: prpo-auth
              servicePort: 80
            path: /auth/(.*)
          - backend:
              serviceName: prpo-chargers
              servicePort: 80
            path: /char/(.*)
